===================
NDO Utils Changelog
===================


1.5.1 - 05/15/2012
------------------
* Fixed off-by-one error packing data in ndomod.

1.5 - 02/03/2012
----------------
* Added various performance improvements originally added for Nagios XI (Ethan Galstad)
* Added asynchronous data spooling to increase performance (andree)
* Fixed to small es array (Michael Friedrich)
* Fixed wrong type of object_id in ndo2db_save_custom_variables() (Michael Friedrich)


1.4b9 - 10/27/2009
------------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6 or higher
- Improved writes from file2sock to ndo2db by matching buffer sizes (Opsera Ltd)
- Add in 4 missing tables from clearout process during prelaunch (Opsera Ltd)
- Fix for Solaris 10 which gets an EINTR on accept for the 2nd file2sock call (Opsera Ltd)
- Fix for not retrying read on 'EAGAIN' and 'EINTR' soft errors (Opsera Ltd)
- Improve error info by showing failed MySQL query in syslog (Opsera Ltd)
- Move database connections/disconnections syslog detail to DEBUG from INFO (Opsera Ltd)
- Allow externalcommands table to be trimmed with a specific time limit (Opsera Ltd)
- Support SSL encryption between the communication partners
- Support for long performance data
- Added installation procedure with "make install" or "make fullinstall"
- Fix missing output fields in hostcheck and servicecheck tables
- Workaround small NDOMOD Buffers to handle more than 4k chars (tracker id 21)
- Fix unescape of strings containing tabstops
- Fix case insensitive behavior in NDOUtils (tracker id 66)
  HINT: Now NDOUtils handles renaming objects like Nagios itself.
	localhost is not like LoCaLhOsT - they are two different objects



1.4b8 - 07/16/2009
------------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6 or higher
- Added additional error messages during failed startup
- Better MySQL library detection (Ton Voon, Herbert Straub, and Nagios Plugin Team)